// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Filters /> should open the menu 1`] = `
.emotion-68 {
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 12px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-0 {
  margin-top: 8px;
  width: 100%;
  border: 1px solid transparent;
  padding: 12px;
  padding-left: 32px;
  border-radius: 2px;
  color: #e0e0e0;
  background-color: #2e2e2e;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
}

.emotion-0:hover {
  border: 1px solid #808080;
}

.emotion-0:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-0::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-0::-moz-placeholder {
  font-style: italic;
}

.emotion-0:-ms-input-placeholder {
  font-style: italic;
}

.emotion-0::placeholder {
  font-style: italic;
}

.emotion-63 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow-x: auto;
}

.emotion-32 {
  background-color: #252525;
  border-radius: 2px;
}

.emotion-32:last-of-type > div:last-of-type {
  border-bottom: 1px solid #3b3b3b;
}

.emotion-32:first-of-type > div {
  border-top: none;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top: 1px solid #3b3b3b;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 12px;
}

.emotion-5:hover {
  cursor: pointer;
  background-color: #2e2e2e;
}

.emotion-5 h4 {
  font-size: 15px;
  font-weight: 400;
}

.emotion-3 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  padding: 0;
}

.emotion-3:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-3[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-33:hover {
  color: #ffffff;
}

.emotion-4 {
  font-size: 17px;
  line-height: 20px;
  padding-left: 12px;
  padding-right: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  text-overflow: ellipsis;
}

.emotion-67 {
  padding: 8px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-64 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-64:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-64[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-64,
.emotion-64:hover,
.emotion-64:visited {
  background-color: #808080;
}

.emotion-64:hover {
  background-color: #b3b3b3;
}

.emotion-64[aria-disabled=true] {
  background-color: #808080;
}

.emotion-64 svg {
  margin-right: 8px;
}

.emotion-65 {
  width: 8px;
  min-width: 8px;
}

.emotion-66 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: not-allowed;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-flow: nowrap;
  -ms-flex-flow: nowrap;
  flex-flow: nowrap;
  -webkit-align-items: end;
  -webkit-box-align: end;
  -ms-flex-align: end;
  align-items: end;
}

.emotion-66:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-66[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-66,
.emotion-66:hover,
.emotion-66:visited {
  background-color: #73b61c;
}

.emotion-66:hover {
  background-color: #96c955;
}

.emotion-66[aria-disabled=true] {
  background-color: #808080;
}

.emotion-66 svg {
  margin-right: 8px;
}

.emotion-2 {
  -webkit-transform: rotate(-180deg);
  -ms-transform: rotate(-180deg);
  transform: rotate(-180deg);
}

.emotion-2:hover {
  color: #ffffff;
}

.emotion-31 {
  width: 100%;
  background-color: #191919;
}

.emotion-30 {
  padding: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-16 {
  margin-left: -16px;
  margin-right: -16px;
  padding: 12px;
  padding-top: 8px;
  padding-bottom: 8px;
  border-top: 4px solid #3b3b3b;
}

.emotion-16:first-of-type {
  padding-top: 0;
  border-top: none;
}

.emotion-16:last-of-type {
  padding-bottom: 0;
}

.emotion-6 {
  font-family: Roboto Mono;
  font-weight: 400;
}

.emotion-15 {
  margin-left: 32px;
  border-top: 1px solid #3b3b3b;
}

.emotion-15:first-of-type {
  border-top: none;
}

.emotion-14 {
  padding: 8px;
  margin-left: -32px;
}

.emotion-14:hover {
  background-color: #027aff38;
}

.emotion-13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
  padding-bottom: 0;
  padding-left: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
}

.emotion-7 {
  margin: 0;
  padding: 0;
  width: 16px;
  height: 16px;
  -webkit-appearance: none;
  background-color: transparent;
  border: 2px solid #808080;
  border-radius: 2px;
  cursor: pointer;
}

.emotion-9 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 16px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  cursor: pointer;
}

.emotion-8 path {
  -webkit-transition: all .3s ease;
  transition: all .3s ease;
  opacity: 0;
}

.emotion-12 {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  padding-left: 8px;
}

.emotion-11 {
  color: #b3b3b3;
  font-family: Roboto Mono;
  font-size: 14px;
  line-height: 18px;
}

<div
  className="emotion-68"
>
  <div
    className="emotion-1"
  >
    <label>
      Select metadata fields to filter
      <input
        className="emotion-0"
        onChange={[Function]}
        placeholder="Filter metadata fields"
        type="search"
        value=""
      />
    </label>
  </div>
  <div
    className="emotion-63"
  >
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Collapse Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-2"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          Analysis
        </h4>
      </div>
      <div
        className="emotion-31"
      >
        <div
          className="emotion-30"
        >
          <div
            className="emotion-16"
          >
            <h4
              className="emotion-6"
            >
              zvi
            </h4>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-14"
              >
                <label
                  className="emotion-13"
                >
                  <div
                    className="emotion-10"
                  >
                    <input
                      className="emotion-7"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="analysis.zvi.tinyProxy"
                    />
                    <div
                      className="emotion-9"
                    >
                      <svg
                        className="emotion-8"
                        data-file-name="checkmark.svg"
                        height={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-12"
                  >
                    <span
                      className="emotion-11"
                    >
                      tinyProxy
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
          <div
            className="emotion-16"
          >
            <h4
              className="emotion-6"
            >
              zvi-image-similarity
            </h4>
          </div>
          <div
            className="emotion-16"
          >
            <h4
              className="emotion-6"
            >
              zvi-object-detection
            </h4>
            <div
              className="emotion-15"
            >
              <div
                className="emotion-14"
              >
                <label
                  className="emotion-13"
                >
                  <div
                    className="emotion-10"
                  >
                    <input
                      className="emotion-7"
                      defaultChecked={false}
                      onClick={[Function]}
                      type="checkbox"
                      value="analysis.zvi-object-detection.count"
                    />
                    <div
                      className="emotion-9"
                    >
                      <svg
                        className="emotion-8"
                        data-file-name="checkmark.svg"
                        height={20}
                      />
                    </div>
                  </div>
                  <div
                    className="emotion-12"
                  >
                    <span
                      className="emotion-11"
                    >
                      count
                    </span>
                  </div>
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Expand Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-33"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          Clip
        </h4>
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Expand Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-33"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          Location
        </h4>
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Expand Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-33"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          Media
        </h4>
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Expand Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-33"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          Metrics
        </h4>
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Expand Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-33"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          Source
        </h4>
      </div>
    </div>
    <div
      className="emotion-32"
    >
      <div
        className="emotion-5"
        onClick={[Function]}
      >
        <button
          aria-label="Expand Section"
          className="emotion-3"
          onClick={[Function]}
          type="button"
        >
          <svg
            className="emotion-33"
            color="#808080"
            data-file-name="chevron.svg"
            height={20}
          />
        </button>
        <h4
          className="emotion-4"
        >
          System
        </h4>
      </div>
    </div>
  </div>
  <div
    className="emotion-67"
  >
    <button
      aria-label="Cancel"
      className="emotion-64"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="crossSmall.svg"
        height={18}
      />
      Cancel
    </button>
    <div
      className="emotion-65"
    />
    <button
      aria-disabled={true}
      aria-label="Add Field Filters"
      className="emotion-66"
      onClick={[Function]}
      type="button"
    >
      <svg
        data-file-name="plus.svg"
        height={16}
      />
      Add Field Filters
    </button>
  </div>
</div>
`;

exports[`<Filters /> should render properly 1`] = `
Array [
  .emotion-10 {
  padding: 4px;
  border-bottom: 1px solid #3b3b3b;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  -webkit-flex: 0;
  -ms-flex: 0;
  flex: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 2px;
  margin: 0;
  padding: 12px 32px;
  white-space: nowrap;
  font-size: 15px;
  line-height: 19px;
  font-weight: 500;
  border: none;
  cursor: pointer;
  color: #ffffff;
  background-color: transparent;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  min-width: 190px;
  max-width: 190px;
}

.emotion-2:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-2[aria-disabled=true] {
  color: #2e2e2e;
}

.emotion-2,
.emotion-2:hover,
.emotion-2:visited {
  background-color: #73b61c;
}

.emotion-2:hover {
  background-color: #96c955;
}

.emotion-2[aria-disabled=true] {
  background-color: #808080;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 4px;
}

.emotion-3 {
  width: 8px;
  min-width: 8px;
}

.emotion-5 {
  height: 4px;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: 1px solid transparent;
  padding: 12px;
  padding-left: 32px;
  border-top-left-radius: 2px;
  border-bottom-left-radius: 2px;
  color: #e0e0e0;
  background-color: #191919;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjNGE0YTRhIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
  background-repeat: no-repeat,repeat;
  background-position: left 8px top 50%;
  background-size: 20px;
}

.emotion-6:hover {
  border: 1px solid #808080;
}

.emotion-6:focus {
  outline: 1px solid transparent;
  border: 1px solid #73b61c;
  color: #191919;
  background-color: #ffffff;
  background-image: url('data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyMCAyMCI+CiAgICA8cGF0aCBmaWxsPSIjYjNiM2IzIiBkPSJNMTMuODU3IDEyLjMxNGgtLjgyM2wtLjMwOC0uMzA4YTYuNDM4IDYuNDM4IDAgMDAxLjY0NS00LjMyQTYuNjcyIDYuNjcyIDAgMDA3LjY4NiAxIDYuNjcyIDYuNjcyIDAgMDAxIDcuNjg2YTYuNjcyIDYuNjcyIDAgMDA2LjY4NiA2LjY4NSA2LjQzOCA2LjQzOCAwIDAwNC4zMi0xLjY0NWwuMzA4LjMwOHYuODIzTDE3LjQ1NyAxOSAxOSAxNy40NTdsLTUuMTQzLTUuMTQzem0tNi4xNzEgMGE0LjYxIDQuNjEgMCAwMS00LjYyOS00LjYyOCA0LjYxIDQuNjEgMCAwMTQuNjI5LTQuNjI5IDQuNjEgNC42MSAwIDAxNC42MjggNC42MjkgNC42MSA0LjYxIDAgMDEtNC42MjggNC42Mjh6Ii8+Cjwvc3ZnPg==');
}

.emotion-6::-webkit-input-placeholder {
  font-style: italic;
}

.emotion-6::-moz-placeholder {
  font-style: italic;
}

.emotion-6:-ms-input-placeholder {
  font-style: italic;
}

.emotion-6::placeholder {
  font-style: italic;
}

.emotion-8 {
  width: 42px;
  border-top-right-radius: 2px;
  border-bottom-right-radius: 2px;
  background-color: #808080;
  margin: 0;
  padding: 0;
  border: 0;
  cursor: not-allowed;
}

.emotion-7 {
  color: #3b3b3b;
}

<div
    className="emotion-10"
  >
    <div
      className="emotion-4"
    >
      <button
        aria-label="Add Metadata Filters"
        className="emotion-2"
        onClick={[Function]}
        type="button"
      >
        <div
          className="emotion-1"
        >
          <div
            className="emotion-0"
          >
            <svg
              data-file-name="plus.svg"
              height={20}
            />
          </div>
          Add Metadata Filters
        </div>
      </button>
      <div
        className="emotion-3"
      />
    </div>
    <div
      className="emotion-5"
    />
    <form
      action=""
      method="post"
      onSubmit={[Function]}
    >
      <div
        className="emotion-9"
      >
        <input
          className="emotion-6"
          onChange={[Function]}
          placeholder="Type here to create simple text filter"
          type="search"
          value=""
        />
        <button
          aria-disabled={true}
          aria-label="Search"
          className="emotion-8"
          onClick={[Function]}
          type="submit"
        >
          <svg
            className="emotion-7"
            data-file-name="plus.svg"
            height={20}
          />
        </button>
      </div>
    </form>
  </div>,
  .emotion-0 {
  overflow: auto;
}

<div
    className="emotion-0"
  />,
]
`;
